# white_square_maker

./: LICENSE  README.md  main.py  pyproject.toml
